src/main/java/com/example/stream/spring/courses/reactive/example/model/error/CollegeSuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface CollegeSuccess extends Success permits CollegeDeleteOk {
}
